--- a/src/Locale/en_US/model_history.po
+++ b/src/Locale/en_US/model_history.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2015-03-11 12:13+0000\n"
-"PO-Revision-Date: 2015-03-11 13:14+0100\n"
+"PO-Revision-Date: 2015-03-11 14:48+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team:  <EMAIL@ADDRESS>\n"
 "Language: en_US\n"
@@ -18,7 +18,7 @@ msgstr ""
 #: /Template/ModelHistory/show_model_history.ctp:2
 #: /View/Helper/ModelHistoryHelper.php:41
 msgid "model_history"
-msgstr "History"
+msgstr "Activities"
 
 #: /View/Helper/ModelHistoryHelper.php:44
 msgid "updated"
