--- a/src/Locale/de_DE/model_history.po
+++ b/src/Locale/de_DE/model_history.po
@@ -4,42 +4,69 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2015-03-24 08:46+0000\n"
-"PO-Revision-Date: 2015-04-22 17:27+0100\n"
+"POT-Creation-Date: 2016-11-10 13:07+0100\n"
+"PO-Revision-Date: 2016-11-10 13:09+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team:  <EMAIL@ADDRESS>\n"
+"Language-Team: EMAIL@ADDRESS\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.7.6\n"
-"Language: de\n"
+"X-Generator: Poedit 1.8.8\n"
 
-#: /Users/cleptric/Sites/curveup_backend/Model/Table/ModelHistoryTable.php:52
+#: /Users/ksch/Sites/cake-model-history/src/Model/Behavior/HistorizableBehavior.php:73
+msgid "field.id"
+msgstr "ID"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Behavior/HistorizableBehavior.php:74
+msgid "field.comment"
+msgstr "Kommentar"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Behavior/HistorizableBehavior.php:75
+msgid "field.created"
+msgstr "Erstellungsdatum"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Behavior/HistorizableBehavior.php:76
+msgid "field.modified"
+msgstr "Änderungsdatum"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Entity/HistoryContextTrait.php:81
+msgid "context.type.controller"
+msgstr "Controller"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Entity/HistoryContextTrait.php:82
+msgid "context.type.shell"
+msgstr "Shell"
+
+#: /Users/ksch/Sites/cake-model-history/src/Model/Table/ModelHistoryTable.php:54
 msgid "comment_empty"
 msgstr "kein Kommentar vorhanden"
 
-#: /Users/cleptric/Sites/curveup_backend/Template/Element/model_history_area_panel.ctp:3
-#: /Users/cleptric/Sites/curveup_backend/View/Helper/ModelHistoryHelper.php:53
-msgid "model_history"
-msgstr "Model Historie"
-
-#: /Users/cleptric/Sites/curveup_backend/Template/ModelHistory/index.ctp:2
+#: /Users/ksch/Sites/cake-model-history/src/Template/Element/model_history_area.ctp:18
 msgid "no_history"
 msgstr "Keine Historie vorhanden"
 
-#: /Users/cleptric/Sites/curveup_backend/View/Helper/ModelHistoryHelper.php:56
+#: /Users/ksch/Sites/cake-model-history/src/Template/Element/model_history_area_panel.ctp:3
+msgid "model_history"
+msgstr "Model Historie"
+
+#: /Users/ksch/Sites/cake-model-history/src/View/Helper/ModelHistoryHelper.php:84
+msgid "created"
+msgstr "erstellt"
+
+#: /Users/ksch/Sites/cake-model-history/src/View/Helper/ModelHistoryHelper.php:87
 msgid "updated"
 msgstr "aktualisiert"
 
-#: /Users/cleptric/Sites/curveup_backend/View/Helper/ModelHistoryHelper.php:59
+#: /Users/ksch/Sites/cake-model-history/src/View/Helper/ModelHistoryHelper.php:90
 msgid "deleted"
 msgstr "gelöscht"
 
-#: /Users/cleptric/Sites/curveup_backend/View/Helper/ModelHistoryHelper.php:62
+#: /Users/ksch/Sites/cake-model-history/src/View/Helper/ModelHistoryHelper.php:93
 msgid "commented"
 msgstr "kommentiert"
 
-#: /Users/cleptric/Sites/curveup_backend/View/Helper/ModelHistoryHelper.php:76
+#: /Users/ksch/Sites/cake-model-history/src/View/Helper/ModelHistoryHelper.php:110
 msgid "by"
 msgstr "von"
