--- a/src/Locale/en_US/model_history.po
+++ b/src/Locale/en_US/model_history.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2017-01-12 16:58+0100\n"
-"PO-Revision-Date: 2017-01-12 17:54+0100\n"
+"POT-Creation-Date: 2017-02-08 13:13+0100\n"
+"PO-Revision-Date: 2017-02-08 13:14+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: EMAIL@ADDRESS\n"
 "Language: en_US\n"
@@ -33,6 +33,9 @@ msgstr "Controller"
 msgid "context.type.shell"
 msgstr "Shell"
 
+msgid "context.type.slug"
+msgstr "Slug"
+
 msgid "comment_empty"
 msgstr "Please enter a comment."
 
@@ -48,6 +51,9 @@ msgstr "Actions"
 msgid "model_history"
 msgstr "Activities"
 
+msgid "called_site"
+msgstr "Called Site"
+
 msgid "load_previous"
 msgstr "Load Previous"
 
@@ -56,6 +62,12 @@ msgstr "Change History"
 
 msgid "load_next"
 msgstr "Load Next"
+
+msgid "enter_comment"
+msgstr "Enter Comment..."
+
+msgid "save"
+msgstr "Save"
 
 msgid "filter.fields"
 msgstr "Fields"
